# boilerplato

./: .gitignore  .halt.releez.yml  Cargo.toml  LICENSE  README.md  install.sh  releez.yml  todo.txt  tusk.yml
design/: boilerplato.json  boilerplato.yml  design.md  todo.txt
scripts/: upload-artifacts.sh
src/: error.rs  help.rs  lib.rs  main.rs
src/constants/: mod.rs
src/data_prompts/: mod.rs
src/generator/: mod.rs  project_template.rs
src/generator/post_generator/: help_text.rs  mod.rs  post_command.rs  var_subs.rs
src/prelude/: mod.rs
src/search/: mod.rs
src/template_engine/: mod.rs
src/template_engine/handlebars/: helpers.rs  mod.rs
src/types/: mod.rs  template_config.rs
src/utils/: mod.rs
