[package]
name = "boilerplato"
version = "1.0.0"
description = "Generate app's boilerplate source code and focus on app logic."
homepage = "https://boilerplato.com"
repository = "https://github.com/boilerplato/boilerplato"
keywords = ["boilerplate", "boilerplate-application", "cli"]
categories = ["command-line-utilities", "template-engine"]
authors = ["Rousan Ali <rousanali786@gmail.com>"]
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
clap = "2.33"