[package]
name = "boilerplato"
version = "1.0.3"
description = "A powerful tool to generate boilerplate source code from a template."
homepage = "https://boilerplato.com"
repository = "https://github.com/boilerplato/boilerplato"
keywords = ["boilerplate", "template", "cli"]
categories = ["command-line-utilities", "template-engine"]
authors = ["Rousan Ali <hello@rousan.io>"]
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
clap = "2.33"
colored = "1.9"
lazy_static = "1.4.0"
url = "2.1"
uuid = { version = "0.8", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
handlebars = "3.0.1"
regex = "1.3"
semver = "0.9.0"
gitignore = "1.0.6"
pathdiff = "0.1.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }